MAPD-811 - Mobile filters - fix slider layout bug on iOS Safari browser

--- a/frontend/map/styles/mayday/pages/map/mapSettings-mobile.styl
+++ b/frontend/map/styles/mayday/pages/map/mapSettings-mobile.styl
@@ -6,10 +6,12 @@
 
   .list
     padding-bottom: 42px; // account for scrolling over the footer button
+    width: 100%;
 
   .item.settings-row
     $fnClearfix()
     padding: 16px 37px;
+    width: 100%
 
   .settings-header
     font-size: 16px;
